// This protocol is used as part of Cloudflare Workers' internal observability infrastructure,
// which uses Jaeger. This currently isn't actually used in workerd, but is included because we
// haven't finished the work to abstract this out from the tracing system so that we can avoid the
// depnedency.
//
// workerd users who want tracing should instead get it through Trace Workers, which allows more
// flexibility to integrate with arbitrary tracing infrastructure.
//
// TODO(cleanup): Finish factoring this out. We can then eliminate the dependency on protobuf
//   altogether!

// OBTAINED FROM: https://github.com/jaegertracing/jaeger-idl/blob/d64c4eb/proto/api_v2/model.proto
// ON: 2020-05-08
//
// Due to the backwards-compatible nature of protobufs, it's unnecessary to keep the .proto file
// up-to-date unless we need newly-introduced features.
//
// Note: The file was modified to remove an unneeded dependency on the golang "gogo" generator.

// =======================================================================================

// Copyright (c) 2018 Uber Technologies, Inc.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
// http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax="proto3";

package jaeger.api_v2;

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";

enum ValueType {
  STRING  = 0;
  BOOL    = 1;
  INT64   = 2;
  FLOAT64 = 3;
  BINARY  = 4;
};

message KeyValue {
  string    key      = 1;
  ValueType v_type    = 2;
  string    v_str     = 3;
  bool      v_bool    = 4;
  int64     v_int64   = 5;
  double    v_float64 = 6;
  bytes     v_binary  = 7;
}

message Log {
  google.protobuf.Timestamp timestamp = 1;
  repeated KeyValue fields = 2;
}

enum SpanRefType {
  CHILD_OF = 0;
  FOLLOWS_FROM = 1;
};

message SpanRef {
  bytes trace_id = 1;
  bytes span_id = 2;
  SpanRefType ref_type = 3;
}

message Process {
  string service_name = 1;
  repeated KeyValue tags = 2;
}

message Span {
  bytes trace_id = 1;
  bytes span_id = 2;
  string operation_name = 3;
  repeated SpanRef references = 4;
  uint32 flags = 5;
  google.protobuf.Timestamp start_time = 6;
  google.protobuf.Duration duration = 7;
  repeated KeyValue tags = 8;
  repeated Log logs = 9;
  Process process = 10;
  string process_id = 11;
  repeated string warnings = 12;
}

message Trace {
  message ProcessMapping {
      string process_id = 1;
      Process process = 2;
  }
  repeated Span spans = 1;
  repeated ProcessMapping process_map = 2;
  repeated string warnings = 3;
}

message Batch {
    repeated Span spans = 1;
    Process process = 2;
}

message DependencyLink {
  string parent = 1;
  string child = 2;
  uint64 call_count = 3;
  string source = 4;
}
